Provide support for slices
- Support for -slice and -slices for multiple invocations.
- Refactor SBOMApplication.
- Support cleaning up the cache if it's temporary.
- Always use a cache, even if just a temporary one.
- Update to Java 21.
- Remove -byte-cache.
- Support caching binary artifact content via ContentHandler.
- Upgrade to Tycho 5.0.1.